--- a/netflix.css
+++ b/netflix.css
@@ -48,10 +48,10 @@ article > section> section> section >a:hover, article > section> section > a:act
 article > section{
   imageposition:center;
 }
-article > section > p{
+article > section > section >p{
   border: 1px solid black;
   padding: 10px;
-  width: 800px;
-  height: 600px;
+  width: 700px;
+  height: 350px;
   text-align: justify;
 }
