--- a/netflix.css
+++ b/netflix.css
@@ -42,14 +42,14 @@ body{
     display: inline-block;
 }
 
-}
-article > section{
-  imageposition:center;
-}
+
 .htext p{
   border: 1px solid black;
   padding: 10px;
-  width: 700px;
-  height: 350px;
+  width: 1000px;
+  height: 500px;
   text-align: justify;
+}
+.htext h2{
+  color: #f00;
 }
