--- a/historyOfStreaming.css
+++ b/historyOfStreaming.css
@@ -1,3 +1,7 @@
+body{
+  background-color: black;
+  color: white;
+}
 
 .topnav {
     overflow: hidden;
@@ -10,17 +14,16 @@
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
-    text-decoration: none;
 }
 
 .topnav a:hover {
     background-color: #ddd;
     color: black;
 }
-.text{
-    border: 1px solid white;
-    width: 1000px;
-    height: 500px;
-    font-size: 18px;
-
+.text {
+  border: 1px solid black;
+  padding: 10px;
+  width: 1000px;
+  height: 500px;
+  text-align: justify;
 }
